@@ -51,6 +51,11 @@ def test_suite():
                      test_class = ImageScalesTestCase,
                      optionflags=doctest.ELLIPSIS | doctest.NORMALIZE_WHITESPACE,
                      package = 'valentine.imagescales.browser'),
+        FunctionalDocFileSuite('attopic.txt',
+                     setUp=setUpImg,
+                     test_class = ImageScalesTestCase,
+                     optionflags=doctest.ELLIPSIS | doctest.NORMALIZE_WHITESPACE,
+                     package = 'valentine.imagescales.browser'),
         FunctionalDocFileSuite('multimedia.txt',
                      setUp=setUpMultimedia,
                      test_class = ImageScalesTestCase,
